Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11328

ListView segfaults when changing model with highlightRangeMode = ListView.StrictlyEnforceRange

XMLWordPrintable

    • 96032bd846c7188ce2655d2402c7a745e91a5168

      ListView segfault when changing model with highlightRangeMode = ListView.StrictlyEnforceRange

        1. ListViewTest.qml
          0.6 kB
          Arnaud de Turckheim
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            quark Arnaud de Turckheim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes