Fix crash when changing ListView model with highlightRangeMode: ListView.StrictlyEnforceRange

Task-number: QTBUG-11328